<fix> Button sizes on mobile.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -586,6 +586,21 @@ video {
   top: 50%;
 }
 
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .-mb-5 {
   margin-bottom: -1.25rem;
 }
@@ -620,6 +635,24 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.min-w-min {
+  min-width: -moz-min-content;
+  min-width: min-content;
+}
+
+.min-w-max {
+  min-width: -moz-max-content;
+  min-width: max-content;
+}
+
+.min-w-10 {
+  min-width: 2.5rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
 }
 
 .-translate-y-1\/2 {
@@ -790,6 +823,15 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:my-auto {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
   .sm\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
